@@ -1,3 +1,10 @@
+2001-07-24  Mo DeJong  <mdejong@redhat.com>
+
+	* win/tclWinThrd.c (Tcl_CreateThread): Close Windows
+	HANDLE returned by _beginthreadex. The MS documentation
+	states that this handle is not closed by a later call to
+	_endthreadex.
+
 2001-07-21  Don Porter  <dgp@users.sourceforge.net>
 
 	* doc/pkgMkindex.n:
